# Rubic-sCube

./: CMakeLists.txt  README.md  setup.sh
include/: Colors.h  Model.h  Points.h  RCube.h  Shader.h  func.h  globals.h  indicies.h
shaders/: fs_3d.glsl  vs_3d.glsl
src/: Model.cpp  RCube.cpp  Rubic'sCube.cpp  RubicsCube.cpp  Shader.cpp  func.cpp
